After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 588373 - Menus broken by client-side-windows
Menus broken by client-side-windows
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Backend: Win32
2.17.x
Other Windows
: Normal blocker
: ---
Assigned To: gtk-win32 maintainers
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2009-07-12 15:34 UTC by Hans Breuer
Modified: 2009-07-13 07:55 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Hans Breuer 2009-07-12 15:34:29 UTC
As mentioned in http://mail.gnome.org/archives/gtk-devel-list/2009-July/msg00010.html menus are not working any longer. They do popup but apparently dont get any further events (beside 'popdown').

This is already fixed in my local version, but needs some cleanup before commit.